Added QR code mobile login.

--- a/public/index.html
+++ b/public/index.html
@@ -16,10 +16,18 @@
     margin-top: 300px;
   }
   
+  #qrcode {
+    margin: 0 auto;
+    margin-top: 300px;
+    width: 400px;
+    height: 400px;
+    display: none;
+  }
 </style>
 <body id="body">
 
-<h1 id="banner">Hello</h1>
+<img id="qrcode" src="">
+<h1 id="banner"></h1>
 
 </body>
 <script type="text/javascript" src="./dist/bundle.js"></script>
