Loading client library from CDN.

--- a/public/index.html
+++ b/public/index.html
@@ -30,5 +30,6 @@
 <h1 id="banner"></h1>
 
 </body>
-<script type="text/javascript" src="./dist/bundle.js"></script>
+<script src="https://senza-sdk.streaming.synamedia.com/latest/bundle.js"></script>
+<script type="text/javascript" src="hello.js"></script>
 </html>
