--- a/public/index.html
+++ b/public/index.html
@@ -2,28 +2,8 @@
 <html>
 <head>
   <title>Hello</title>
+	<link rel="stylesheet" href="index.css">
 </head>
-<style>
-
-  body {
-    background-color: white;
-    text-align: center;
-    font-family: Avenir, Verdana, Arial, sans-serif;
-    font-size: 72pt;
-  }
-  
-  #banner {
-    margin-top: 300px;
-  }
-  
-  #qrcode {
-    margin: 0 auto;
-    margin-top: 300px;
-    width: 400px;
-    height: 400px;
-    display: none;
-  }
-</style>
 <body id="body">
 
 <img id="qrcode" src="">
@@ -31,5 +11,5 @@
 
 </body>
 <script src="https://senza-sdk.streaming.synamedia.com/latest/bundle.js"></script>
-<script type="text/javascript" src="hello.js"></script>
+<script type="text/javascript" src="index.js"></script>
 </html>
