--- a/public/login.html
+++ b/public/login.html
@@ -3,31 +3,8 @@
 <head>
   <title>Hello</title>
   <meta name="viewport" content="width=480" />
+	<link rel="stylesheet" href="login.css">
 </head>
-<style>
-
-  body {
-    background-color: white;
-    text-align: center;
-    font-family: Avenir, Verdana, Arial, sans-serif;
-    font-size: 30pt;
-  }
-  
-  .label {
-    margin: 30px 20px 0px 20px;
-  }
-  
-  input {
-    font-family: Avenir, Verdana, Arial, sans-serif;
-    font-size: 36pt;
-  }
-  
-  a {
-    font-family: Avenir, Verdana, Arial, sans-serif;
-    font-size: 36pt;
-  }
-  
-</style>
 <body id="body">
 
   <h2 class="label">username</h2>
